--- a/limbo/affiliate/templates/page/about_page.html
+++ b/limbo/affiliate/templates/page/about_page.html
@@ -5,6 +5,98 @@
 {% block css%}<link rel="stylesheet" href="{% static 'pageCss/about.css'%}"> {% endblock css%}
     {% block title%}about us: hipein.com{% endblock title%}
     {% block content%}
+    <style media="screen">
+      /* responsive nav-bar */
+      body{
+        background: #fff;
+      }
+      header{
+        position: relative;
+        width: 100%;
+        margin: 0;
+        padding: 10px;
+        background: #fff;
+        box-sizing: border-box;
+        box-shadow: 0 2px 5px rgba(0,0,0,.2);
+      }
+      .logo{
+        color: #0984e3;
+        height: 60px;
+        font-size: 36px;
+        line-height: 60px;
+        padding: 0 20px;
+        text-align: center;
+        box-sizing: border-box;
+        float: left;
+        font-weight: 700;
+        text-decoration: none;
+        cursor: default;
+      }
+      nav{
+        float: right;
+      }
+      .clearfix{
+        clear: both;
+      }
+      nav ul {
+        margin: 0;
+        padding: 0;
+        display: flex;
+      }
+      nav ul li{
+        list-style: none;
+      }
+      nav ul li a{
+        display: block;
+        margin: 10px 0;
+        padding: 10px 20px;
+        text-decoration: none;
+        color: #262626;
+      }
+      nav ul li a.active,
+      nav ul li a:hover{
+        background: #0984e3;
+        color: #fff;
+        transition: 0.5s;
+        text-decoration: none;
+      }
+      }
+      @media (max-width: 768px) {
+          .menu-toggle{
+            display: block;
+            width: 40px;
+            height: 40px;
+            margin: 10px;
+            /* background: #ccc; */
+            float: right;
+            cursor: pointer;
+            text-align: center;
+            font-size: 30px;
+            color: #0984e3;
+          }
+          .menu-toggle:before{
+            content: '\f0c9';
+            font-family: fontAwesome;
+            line-height: 40px;
+          }
+          .menu-toggle.active:before{
+            content: '\f00d';
+          }
+          nav{
+            display: none;
+          }
+          nav.active{
+            display: block;
+            width: 100%;
+          }
+          nav.active ul{
+            display: block;
+          }
+          nav.active ul a{
+            margin: 0;
+          }
+      }
+    </style>
     <!-- about -->
     <p class="head_about">About Us</p>
     <hr>
@@ -80,12 +172,4 @@
       </div>
       </div>
   </div>
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $('.menu-toggle').click(function(){
-          $('.menu-toggle').toggleClass('active')
-          $('nav').toggleClass('active')
-        })
-      })
-      </script>
   {% endblock content %}
