--- a/limbo/affiliate/templates/blog/mobile_10k/mobile_10k.html
+++ b/limbo/affiliate/templates/blog/mobile_10k/mobile_10k.html
@@ -15,7 +15,7 @@
           <p>By <span  style="color:blue">Rohit Raj</span>- Updated on <b style="color:gray">7 July, 2020</b></p>
         </div>
         <div>
-          <img class="image"src="{% static 'image/mobile\10k\10k.jpg '%}" alt="">
+          <img class="image"src="{% static 'image/mobile\10k\10k-1.jpg '%}" alt="">
         </div>
         <div class="info">
           <h4 class="content">Mobile facts</h4>
@@ -48,7 +48,7 @@
         <div class="info">
           <h2 class="content" style="padding-left:3px; border-left: 2px solid red">1. Motorola G8 Power Lite</h2>
           <div>
-            <img class="image"src="{% static 'image/mobile\10k\moto-g8-power-lite.jpg '%}" alt="">
+            <img class="image"src="{% static 'image/mobile\10k\moto-g8-power-lite-1.jpg '%}" alt="">
           </div>
           <p class="content" style="border-bottom: 1px solid #eee;">Image source | youtube.com-uploaded by: IT.TECH</p>
           <h4 class="content">About Motorola G8 Power Lite</h4>
