--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -261,7 +261,7 @@
         </div>
         <!-- 1 -->
         <div class="headline">
-          <img src="{% static 'image/mobile\10k\10k.jpg '%}" alt="">
+          <img src="{% static 'image/mobile\10k\10k-1.jpg '%}" alt="">
           <div class="headline-text">
             <a href="{% url 'mobile10k'%}"><h6 class="headline-title">Best smartphone under 10,000-INR</h6></a>
             <p class="headline-date">6 July 2020</p>
