--- a/limbo/affiliate/templates/blog/mobile_10k/mobile_10k.html
+++ b/limbo/affiliate/templates/blog/mobile_10k/mobile_10k.html
@@ -15,7 +15,7 @@
           <p>By <span  style="color:blue">Rohit Raj</span>- Updated on <b style="color:gray">7 July, 2020</b></p>
         </div>
         <div>
-          <img class="image"src="{% static 'image/mobile\10k\10k-1.jpg '%}" alt="">
+          <img class="image"src="{% static 'image/mobile\10k\mobile-10k.jpg '%}" alt="">
         </div>
         <div class="info">
           <h4 class="content">Mobile facts</h4>
