--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -107,6 +107,9 @@
         #srh button{
           margin-left: 2px;
         }
+        .carousel-inner img{
+          height: 220px;
+        }
         .card-slide{
           margin-top: 10px;
         }
