--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -70,7 +70,7 @@
         </div>
         <div class="col mb-4">
           <div class="card card1">
-            <img src="{% static 'image/mobile\10k\10k-1.jpg '%}" class="card-img-top" alt="...">
+            <img src="{% static 'image/mobile\10k\redmi-8.jpg'%}" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Best smartphone under 10,000-INR</h5>
               <p class="card-text">There are some smartphone in the market that are good within in range of 7,000-10,000 INR...</p><br>
