--- a/limbo/affiliate/templates/page/article_page.html
+++ b/limbo/affiliate/templates/page/article_page.html
@@ -542,7 +542,7 @@
               <h4>Trending Blogs</h4>
             </div>
             <div class="side-blog-post">
-              <img class="side-blog-img" src="{% static 'image/mobile\10k\10k-1.jpg '%}" alt="">
+              <img class="side-blog-img" src="{% static 'image/mobile\10k\redmi-8.jpg'%}" alt="">
               <div class="side-bloger-name">
                 <img src="{% static 'image/team/aman-acharya.jpg'%}" alt="">
                 <a href="{% url 'mobile10k'%}"><h6>Best smartphone under 10,000-INR </h6></a>
