--- a/limbo/affiliate/templates/page/bas.html
+++ b/limbo/affiliate/templates/page/bas.html
@@ -183,7 +183,6 @@
           display: none;
         }
         #srh{
-          margin-top: 5px;
           width: 97%;
           left: 10px;
         }
@@ -261,7 +260,7 @@
         </div>
         <!-- 1 -->
         <div class="headline">
-          <img src="{% static 'image/mobile\10k\10k-1.jpg '%}" alt="">
+          <img src="{% static 'image/mobile\10k\redmi-8.jpg'%}" alt="">
           <div class="headline-text">
             <a href="{% url 'mobile10k'%}"><h6 class="headline-title">Best smartphone under 10,000-INR</h6></a>
             <p class="headline-date">6 July 2020</p>
