--- a/limbo/affiliate/templates/page/search.html
+++ b/limbo/affiliate/templates/page/search.html
@@ -371,7 +371,7 @@
           <article class="blog-post shadow">
             <div class="post">
               <div class="">
-                <img class="img-article" src="{% static 'image/mobile\10k\10k.jpg '%}" alt="">
+                <img class="img-article" src="{% static 'image/mobile\10k\redmi-8.jpg'%}" alt="">
               </div>
               <div class="post-info">
                 <h3 style="color:gray;">Best smartphone under 10,000-INR</h3>
