--- a/limbo/affiliate/templates/page/about_page.html
+++ b/limbo/affiliate/templates/page/about_page.html
@@ -62,6 +62,10 @@
       }
       }
       @media (max-width: 768px) {
+          .logo{
+            margin-top: 2px;
+            padding: 0;
+          }
           .menu-toggle{
             display: block;
             width: 40px;
