--- a/limbo/affiliate/templates/page/about_page.html
+++ b/limbo/affiliate/templates/page/about_page.html
@@ -64,6 +64,7 @@
       @media (max-width: 768px) {
           .logo{
             margin-top: 2px;
+            margin-left: -10px;
             padding: 0;
           }
           .menu-toggle{
