--- a/limbo/affiliate/templates/page/search.html
+++ b/limbo/affiliate/templates/page/search.html
@@ -1,269 +1,269 @@
 {% extends 'page/srch.html' %}
 {% block desc%}<meta name="description" content="Search here!: See best deal on products">{% endblock desc%}
-{% load static %}
-{% load static%}
-{% block css%}<link rel="stylesheet" href="{% static 'pageCss/srch_pageCss.css'%}"> {% endblock css%}
-    {% block title%}hipein.com: search & Brower for Item{% endblock title%}
-    {% block content%}
-    <style media="screen">
-      body{
-        background: #fff
+{% block style %}
+<style>
+  body{
+    background: #fff
+  }
+  .search{display: flex; width: 76.5%;margin: 20px 200px 20px 150px;}
+  .search-result{
+    margin-bottom: 20px;
+    border-bottom: 1px solid #eee;
+    border-top: 1px solid #eee;
+  }
+  .search-posts{
+    width: 69.4%;
+  }
+  .search-post{
+    display: flex;
+  }
+  .search-img{
+    width: 100px;
+    height: 70px;
+  }
+  .search-info{
+    padding-left: 10px;
+    border-left: 2px solid red;
+  }
+  .aside{
+    width: 31%;
+    padding-left: 10px;
+  }
+  .aside h4{
+    border-bottom: 1px solid #eee;
+    color: gray;
+  }
+  .badge a:hover{
+    text-decoration: none;
+  }
+  /* follow us */
+  .social {
+    padding: 20px;
+    font-size: 20px;
+    width: 60px;
+    text-align: center;
+    text-decoration: none;
+  }
+  .social:hover {
+    color: white;
+    text-decoration: none;
+  }
+
+  /* Facebook */
+  .social-fb {
+    background: #3B5998;
+    color: white;
+  }
+  /* twitter */
+  .social-twit {
+    background: #55ACEE;
+    color: white;
+    margin-left: 10px;
+  }
+  /* instagram */
+  .social-insta{
+    background: #dd4b39;
+    color: white;
+    margin-left: 10px;
+  }
+  .Categories{
+    margin-left: 240px;
+    font-weight: 500;
+  }
+  .Categories1{
+    margin-left: 540px;
+    font-weight: 500;
+  }
+  .Category{
+    padding-top: 20px;
+  }
+  .cat-link{
+    padding-top: 10px;
+  }
+  .cat-link a:hover{
+    text-decoration: none;
+    background-color:#007bff;
+    color: white
+  }
+  .cat1{
+    border: 1px solid;
+    padding: 4px 15px;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  .cat2{
+    border: 1px solid;
+    padding: 4px 8px;
+    margin-left: 10px;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  .cat3{
+    border: 1px solid;
+    padding: 4px 14px;
+    margin-left: 10px;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  .blogs{
+    display: flex;
+    width: 100%;
+    margin: 20px 200px 20px 150px;
+  }
+  .blog-post{
+    margin-bottom: 20px;
+    border-bottom: 1px solid #eee;
+    border-top: 1px solid #eee;
+  }
+  .blog-posts{
+    width: 69.4%;
+  }
+  .post{
+    display: flex;
+  }
+  .img-article{
+    width: 100%;
+  }
+  .post-info{
+    padding-left: 10px;
+    border-left: 2px solid red;
+  }
+  .aside{
+    width: 31%;
+    padding-left: 10px;
+  }
+  .aside h4{
+    border-bottom: 1px solid #eee;
+    color: gray;
+  }
+  .badge a:hover{
+    text-decoration: none;
+  }
+  .Categories{
+    margin-left: 240px;
+    font-weight: 500;
+  }
+
+  @media (max-width: 1200px) {
+    .blogs{
+      width: 100%;
+      margin: 10px 0;
+    }
+    .blog-posts{
+      width: 100%;
+    }
+    .post{
+      width: 100%;
+    }
+    .post-info{
+      font-size: 15px;
+    }
+    .aside{
+      width: 43%;
+    }
+    .img-article{
+      width: 100%;
+    }
+    .search{
+      width: 99%;
+      margin:0 ;
+    }
+    .search-post{
+      width: 100%;
+    }
+    .aside{
+      width: 43%;
+    }
+  }
+  @media (max-width: 768px) {
+      .menu-toggle{
+        display: block;
+        width: 40px;
+        height: 40px;
+        margin: 10px;
+        /* background: #ccc; */
+        float: right;
+        cursor: pointer;
+        text-align: center;
+        font-size: 30px;
+        color: #0984e3;
+        }
+      .menu-toggle:before{
+        content: '\f0c9';
+        font-family: fontAwesome;
+        line-height: 40px;
       }
-      .search{display: flex; width: 76.5%;margin: 20px 200px 20px 150px;}
-      .search-result{
-        margin-bottom: 20px;
-        border-bottom: 1px solid #eee;
-        border-top: 1px solid #eee;
+      .menu-toggle.active:before{
+        content: '\f00d';
+      }
+      nav{
+        display: none;
+      }
+      nav.active{
+        display: block;
+        width: 100%;
+      }
+      nav.active ul{
+        display: block;
+      }
+      nav.active ul a{
+        margin: 0;
+      }
+      .search{
+        flex-direction: column;
+        width: 100%;
+        margin: 10px 5px ;
       }
       .search-posts{
-        width: 69.4%;
+        width: 100%;
       }
-      .search-post{
-        display: flex;
-      }
-      .search-img{
-        width: 100px;
-        height: 70px;
+      .img-article{
+        width: 100%;
       }
       .search-info{
-        padding-left: 10px;
-        border-left: 2px solid red;
+        border-left:  2px solid red;;
       }
       .aside{
-        width: 31%;
-        padding-left: 10px;
-      }
-      .aside h4{
-        border-bottom: 1px solid #eee;
-        color: gray;
-      }
-      .badge a:hover{
-        text-decoration: none;
-      }
-      /* follow us */
-      .social {
-        padding: 20px;
-        font-size: 20px;
-        width: 60px;
-        text-align: center;
-        text-decoration: none;
-      }
-      .social:hover {
-        color: white;
-        text-decoration: none;
-      }
-
-      /* Facebook */
-      .social-fb {
-        background: #3B5998;
-        color: white;
-      }
-      /* twitter */
-      .social-twit {
-        background: #55ACEE;
-        color: white;
-        margin-left: 10px;
-      }
-      /* instagram */
-      .social-insta{
-        background: #dd4b39;
-        color: white;
-        margin-left: 10px;
+        width: 100%;
       }
       .Categories{
-        margin-left: 240px;
-        font-weight: 500;
-      }
-      .Categories1{
-        margin-left: 540px;
-        font-weight: 500;
-      }
-      .Category{
-        padding-top: 20px;
-      }
-      .cat-link{
-        padding-top: 10px;
-      }
-      .cat-link a:hover{
-        text-decoration: none;
-        background-color:#007bff;
-        color: white
-      }
-      .cat1{
-        border: 1px solid;
-        padding: 4px 15px;
-        text-decoration: none;
-        border-radius: 10px;
-      }
-      .cat2{
-        border: 1px solid;
-        padding: 4px 8px;
-        margin-left: 10px;
-        text-decoration: none;
-        border-radius: 10px;
-      }
-      .cat3{
-        border: 1px solid;
-        padding: 4px 14px;
-        margin-left: 10px;
-        text-decoration: none;
-        border-radius: 10px;
+        margin-left: 40px;
       }
       .blogs{
-        display: flex;
+        flex-direction: column-reverse;
         width: 100%;
-        margin: 20px 200px 20px 150px;
-      }
-      .blog-post{
-        margin-bottom: 20px;
-        border-bottom: 1px solid #eee;
-        border-top: 1px solid #eee;
+        margin: 10px 5px ;
       }
       .blog-posts{
-        width: 69.4%;
+        width: 100%;
       }
       .post{
-        display: flex;
+        flex-direction: column;
+        margin-left: -2px;
       }
       .img-article{
         width: 100%;
       }
       .post-info{
-        padding-left: 10px;
-        border-left: 2px solid red;
+        border-top: 2px solid red;
+        border-left: none;
       }
       .aside{
-        width: 31%;
-        padding-left: 10px;
-      }
-      .aside h4{
-        border-bottom: 1px solid #eee;
-        color: gray;
-      }
-      .badge a:hover{
-        text-decoration: none;
+        width: 100%;
       }
       .Categories{
-        margin-left: 240px;
-        font-weight: 500;
+        margin-left: 40px;
       }
-
-      @media (max-width: 1200px) {
-        .blogs{
-          width: 100%;
-          margin: 10px 0;
-        }
-        .blog-posts{
-          width: 100%;
-        }
-        .post{
-          width: 100%;
-        }
-        .post-info{
-          font-size: 15px;
-        }
-        .aside{
-          width: 43%;
-        }
-        .img-article{
-          width: 100%;
-        }
-        .search{
-          width: 99%;
-          margin:0 ;
-        }
-        .search-post{
-          width: 100%;
-        }
-        .aside{
-          width: 43%;
-        }
+      .Categories1{
+        margin-left: 140px;
       }
-      @media (max-width: 768px) {
-          .menu-toggle{
-            display: block;
-            width: 40px;
-            height: 40px;
-            margin: 10px;
-            /* background: #ccc; */
-            float: right;
-            cursor: pointer;
-            text-align: center;
-            font-size: 30px;
-            color: #0984e3;
-            }
-          .menu-toggle:before{
-            content: '\f0c9';
-            font-family: fontAwesome;
-            line-height: 40px;
-          }
-          .menu-toggle.active:before{
-            content: '\f00d';
-          }
-          nav{
-            display: none;
-          }
-          nav.active{
-            display: block;
-            width: 100%;
-          }
-          nav.active ul{
-            display: block;
-          }
-          nav.active ul a{
-            margin: 0;
-          }
-          .search{
-            flex-direction: column;
-            width: 100%;
-            margin: 10px 5px ;
-          }
-          .search-posts{
-            width: 100%;
-          }
-          .img-article{
-            width: 100%;
-          }
-          .search-info{
-            border-left:  2px solid red;;
-          }
-          .aside{
-            width: 100%;
-          }
-          .Categories{
-            margin-left: 40px;
-          }
-          .blogs{
-            flex-direction: column-reverse;
-            width: 100%;
-            margin: 10px 5px ;
-          }
-          .blog-posts{
-            width: 100%;
-          }
-          .post{
-            flex-direction: column;
-            margin-left: -2px;
-          }
-          .img-article{
-            width: 100%;
-          }
-          .post-info{
-            border-top: 2px solid red;
-            border-left: none;
-          }
-          .aside{
-            width: 100%;
-          }
-          .Categories{
-            margin-left: 40px;
-          }
-          .Categories1{
-            margin-left: 140px;
-          }
-
-      }
-    </style>
+  }
+</style>
+{% endblock style %}
+{% load static %}
+{% block css%}<link rel="stylesheet" href="{% static 'pageCss/srch_pageCss.css'%}"> {% endblock css%}
+{% block title%}hipein.com: search & Brower for Item{% endblock title%}
+{% block content%}
     <section>
       <div class="search">
         <div class="search-posts ">
@@ -317,13 +317,14 @@
         </aside>
       </div>
     </section>
+    
     <section>
       <div class="blogs">
         <div class="blog-posts ">
           <article class="blog-post shadow">
             <div class="post">
               <div class="">
-                <img class="img-article" src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}"alt="">
+                <img class="img-article" src="{% static 'image/mobile/pubg/PUBG-mobile.jpg'%}" alt="">
               </div>
               <div class="post-info">
                 <h3 style="color:gray;">Best PUBG mobile between under 10,000-20,000INR</h3>
@@ -385,5 +386,6 @@
           </article>
           <!-- 5 -->
         </div>
+      </div>
     </section>
 {% endblock content%}
