--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -14,14 +14,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    {% load static %}
-    {% block css%} {% endblock css%}
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <title>{% block title%} {% endblock title%}</title>
-  </head>
-  <body>
-    <style media="screen">
+    {% block style%} {% endblock style %}
+    <style>
     .search_bar{
       width: 100%;
       display: flex;
@@ -155,9 +149,16 @@
         }
       }
     </style>
+    {% load static %}
+    {% block css%} {% endblock css%}
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <title>{% block title%} {% endblock title%}</title>
+  </head>
+  <body>
     <header>
       <div class="logo">
-        <img style="width: 250px; margin-left: -40px;"src="{% static 'image/logo/logo.png'%}" alt="">
+        <img style="width: 250px; margin-left: -40px;" src="{% static 'image/logo/logo.png'%}" alt="">
       </div>
       <div class="menu-toggle"></div>
       <nav>
@@ -185,7 +186,7 @@
 
     <footer>
       <div class="footer_info">
-        <img style="width: 150px; margin-left: -13px;"src="{% static 'image/logo/logo.png'%}" alt="">
+        <img style="width: 150px; margin-left: -13px;" src="{% static 'image/logo/logo.png'%}" alt="">
         <p class="footer_about">Our Foremost motive is to serve you with correct product  review and price info. So, that this marketing arrangment can genearte you with honest purchases.</p>
         <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
         <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
@@ -211,7 +212,7 @@
       </div>
     </footer>
     <!-- script -->
-    <script type="text/javascript">
+    <script>
       $(document).ready(function() {
         $('.menu-toggle').click(function(){
           $('.menu-toggle').toggleClass('active')
@@ -220,7 +221,7 @@
       })
       </script>
       <!-- brand -->
-      <script type="text/javascript">
+      <script>
         $(document).ready(function() {
           $('.brand-menu-toggle').click(function(){
             $('.brand-menu-toggle').toggleClass('active')
