--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -107,10 +107,14 @@
           <a href="{% url 's20plus'%}" class="content_spec">Full Specificaton</a>
           <p></p>
           <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon">
-            <button type="button" class="btn btn-primary">Click here to Buy from amazon</button>
+            <button type="button" class="btn btn-primary">
+              Click here to Buy from amazon
+            </button>
           </a>
           <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart">
-            <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+            <button type="button" class="btn btn-outline-primary">
+              Click here for current price
+            </button>
           </a>
        </div>
       </div>
@@ -127,10 +131,14 @@
           <a href="{% url 'OnePlus_8pro'%}" class="content_spec">Full Specificaton</a>
           <p></p>
           <a href="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2" class="affilated-link_amazon">
-            <button type="button" class="btn btn-primary">Click here to Buy from amazon</button>
+            <button type="button" class="btn btn-primary">
+              Click here to Buy from amazon
+            </button>
           </a>
           <a href="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2" class="affilated-link_flipcart">
-            <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+            <button type="button" class="btn btn-outline-primary">
+              Click here for current price
+            </button>
           </a>
         </div>
       </div>
@@ -150,7 +158,9 @@
             <button type="button" class="btn btn-primary">Click here to Buy from flipkart</button>
           </a>
           <a href="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_flipcart">
-            <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+            <button type="button" class="btn btn-outline-primary">
+              Click here for current price
+            </button>
           </a>
         </div>
       </div>
@@ -167,10 +177,14 @@
          <a href="{% url 'OnePlus_8'%}" class="content_spec">Full Specificaton</a>
          <p></p>
          <a href="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2" class="affilated-link_amazon">
-           <button type="button" class="btn btn-primary">Click here to Buy from amazon</button>
+           <button type="button" class="btn btn-primary">
+             Click here to Buy from amazon
+           </button>
          </a>
          <a href="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2" class="affilated-link_flipcart">
-           <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+           <button type="button" class="btn btn-outline-primary">
+             Click here for current price
+           </button>
          </a>
        </div>
      </div>
@@ -187,10 +201,14 @@
          <a href="{% url 'note9promax' %}" class="content_spec">Full Specification</a>
          <p></p>
          <a href="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1" class="affilated-link_amazon">
-           <button type="button" class="btn btn-primary">Click here to Buy form amazon</button>
+           <button type="button" class="btn btn-primary">
+             Click here to Buy form amazon
+           </button>
          </a>
          <a href="https://www.amazon.in/s?k=Redmi+Note+9+Pro+Max&ref=nb_sb_noss" class="affilated-link_flipcart">
-           <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+           <button type="button" class="btn btn-outline-primary">
+             Click here for current price
+           </button>
          </a>
          <p></p><br>
        </div>
@@ -208,10 +226,14 @@
          <a href="{% url 'mi10' %}" class="content_spec">Full Specificaton</a>
          <p></p>
          <a href="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1" class="affilated-link_amazon">
-           <button type="button" class="btn btn-primary">Click here to Buy form amazon</button>
+           <button type="button" class="btn btn-primary">
+             Click here to Buy form amazon
+           </button>
          </a>
          <a href="https://www.amazon.in/s?k=xiaomi+Mi+10&ref=nb_sb_noss" class="affilated-link_flipcart">
-           <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+           <button type="button" class="btn btn-outline-primary">
+             Click here for current price
+           </button>
          </a>
        </div>
      </div>
@@ -228,10 +250,14 @@
          <a href="{% url '11ProMax' %}" class="content_spec">Full Specificaton</a>
         <p></p>
         <a href="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_amazon">
-          <button type="button" class="btn btn-primary">Click here to Buy form amazon</button>
+          <button type="button" class="btn btn-primary">
+            Click here to Buy form amazon
+          </button>
         </a>
         <a href="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_flipcart">
-          <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+          <button type="button" class="btn btn-outline-primary">
+            Click here for current price
+          </button>
         </a>
        </div>
      </div>
@@ -248,10 +274,14 @@
        <a href="{% url 'vivoV17' %}" class="content_spec">Full Specificaton</a>
        <p></p>
        <a href="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1" class="affilated-link_amazon">
-         <button type="button" class="btn btn-primary">Click here to Buy from amazon</button>
+         <button type="button" class="btn btn-primary">
+           Click here to Buy from amazon
+         </button>
        </a>
        <a href="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1" class="affilated-link_amazon">
-         <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+         <button type="button" class="btn btn-outline-primary">
+           Click here for current price
+         </button>
        </a>
        <p></p>
      </div>
@@ -269,10 +299,14 @@
        <a href="{% url 'realme6pro' %}" class="content_spec">Full Specificaton</a>
        <p></p>
        <a href="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_amazon">
-         <button type="button" class="btn btn-primary">Click here to Buy from flipkart</button>
+         <button type="button" class="btn btn-primary">
+           Click here to Buy from flipkart
+         </button>
        </a>
        <a href="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_flipcart">
-         <button type="button" class="btn btn-outline-primary">Click here for current price </button>
+         <button type="button" class="btn btn-outline-primary">
+           Click here for current price
+         </button>
        </a>
      </div>
    </div>
