--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -38,7 +38,7 @@
     <!-- quick links -->
     <div class="quick-link">
       <div class="link1 shadow">
-        <a class="row1"href="{% url 'pubg'%}">Best PUBG Mobile under <span>&#x20B9;</span>20,000</a>
+        <a class="row1" href="{% url 'pubg'%}">Best PUBG Mobile under <span>&#x20B9;</span>20,000</a>
       </div>
       <div class="link2 shadow">
         <a href="{% url 'mobile10k'%}">Best Mobile under <span>&#x20B9;</span>10000</a>
@@ -49,7 +49,7 @@
     </div>
     <div class="quick-link">
       <div class="link4 shadow">
-        <a class="row2"href="{% url 'battery'%}">Best Bettary Backup Mobile Phone</a>
+        <a class="row2" href="{% url 'battery'%}">Best Bettary Backup Mobile Phone</a>
       </div>
       <div class="link5 shadow">
         <a href="{% url 'camera15k'%}">Best camera phone under <span>&#x20B9;</span>15000</a>
@@ -106,16 +106,18 @@
           <p class="content_text">Samsung Release his new smartphone <span>Samsung Galaxy S20+</span> in india starting from <span>77,999-INR</span>. Samsung S20+ Available at <span>amazon</span> in lowest prices. This smartphone comes with single variant i.e. 8/128GB with colour options like Cosmic Black, Cosmic Grey, Cloud Blue, Cloud White, Aura Red, Aura Blue. The smart -phone is powered by the <span>Exynos 990 (7 nm+) - Global</span> and Non-removable Li-Po 4500 mAh battery.it supports Fast charging of 25W. </p>
           <a href="{% url 's20plus'%}" class="content_spec">Full Specificaton</a>
           <p></p>
-          <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon">
-            <button type="button" class="btn btn-primary">
-              Click here to Buy from amazon
-            </button>
-          </a>
-          <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart">
-            <button type="button" class="btn btn-outline-primary">
-              Click here for current price
-            </button>
-          </a>
+          <form>
+            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon">
+              <button type="button" class="btn btn-primary">
+                Click here to Buy from amazon
+              </button>
+            </a>
+            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart">
+              <button type="button" class="btn btn-outline-primary">
+                Click here for current price
+              </button>
+            </a>
+          </form>
        </div>
       </div>
     </div>
