--- a/limbo/affiliate/templates/page/basic.html
+++ b/limbo/affiliate/templates/page/basic.html
@@ -58,6 +58,9 @@
       color: #fff;
       border: 1px solid #fff;
     }
+    .aff-link1{
+      display: flex;
+    }
     button{
       width: 300px;
     }
@@ -109,6 +112,9 @@
         }
         .content{
           height: 850px;
+        }
+        .aff-link1{
+          flex-direction: column;
         }
         .affilated-link_amazon{
           margin-left:0;
