--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -106,18 +106,17 @@
           <p class="content_text">Samsung Release his new smartphone <span>Samsung Galaxy S20+</span> in india starting from <span>77,999-INR</span>. Samsung S20+ Available at <span>amazon</span> in lowest prices. This smartphone comes with single variant i.e. 8/128GB with colour options like Cosmic Black, Cosmic Grey, Cloud Blue, Cloud White, Aura Red, Aura Blue. The smart -phone is powered by the <span>Exynos 990 (7 nm+) - Global</span> and Non-removable Li-Po 4500 mAh battery.it supports Fast charging of 25W. </p>
           <a href="{% url 's20plus'%}" class="content_spec">Full Specificaton</a>
           <p></p>
-          <form>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon">
-              <button type="button" class="btn btn-primary">
-                Click here to Buy from amazon
-              </button>
-            </a>
-            <a href="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_flipcart">
-              <button type="button" class="btn btn-outline-primary">
-                Click here for current price
-              </button>
-            </a>
-          </form>
+
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
+          </div>
+
+
        </div>
       </div>
     </div>
