--- a/limbo/affiliate/templates/page/Home_page.html
+++ b/limbo/affiliate/templates/page/Home_page.html
@@ -108,7 +108,7 @@
           <p></p>
 
           <div class="aff-link1">
-            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==" class="affilated-link_amazon">
+            <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
               <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
             </form>
             <form action="https://www.amazon.in/Samsung-Galaxy-Storage-Additional-Exchange/dp/B084451YSS/ref=sr_1_1_sspa?dchild=1&keywords=Samsung+Galaxy+S20%2B&qid=1594892677&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUExQ1VYREhZOUVYSkhNJmVuY3J5cHRlZElkPUEwODQ0ODg1SkVRTzBSSFhESEs4JmVuY3J5cHRlZEFkSWQ9QTAwNzgwMjgyMkRWNlQyVlE2SEtFJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
@@ -131,16 +131,16 @@
           <p class="content_text">OnePlus Release his new flagship smartphone <span>OnePlus 8 Pro</span> in india starting from <span>Rs.54,999</span>. OnePlus is available at <span>Amazon</span>. This smartphone comes with 2 variants like 8/128GB, 12/256GB UFS 3.0 storage technology with colour options like Glacial Green, Ultramarine Blue and Onyx Black. The smartphone is powered by <span>Qualcomm Snapdragon 865 (7 nm+) </span> and Non-removable Li-Po 4510 mAh battery that supports Wrap Charge 30T (5V/6A) and Wrap Charge 30 Wireless technologies which can charge 50% in just 23 min. It comes with the 5G chipset:X55 which supports 5G nework.  </p>
           <a href="{% url 'OnePlus_8pro'%}" class="content_spec">Full Specificaton</a>
           <p></p>
-          <a href="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2" class="affilated-link_amazon">
-            <button type="button" class="btn btn-primary">
-              Click here to Buy from amazon
-            </button>
-          </a>
-          <a href="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2" class="affilated-link_flipcart">
-            <button type="button" class="btn btn-outline-primary">
-              Click here for current price
-            </button>
-          </a>
+
+          <div class="aff-link1">
+            <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+            </form>
+            <form action="https://www.amazon.in/Test-Exclusive-543/dp/B078BN2H3R/ref=sr_1_2?dchild=1&keywords=oneplus+8+pro&qid=1594894179&sr=8-2">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
+          </div>
+
         </div>
       </div>
     </div>
@@ -155,14 +155,16 @@
           <p class="content_text">Realme Release his new smartphone <span>Realme X50 Pro 5G</span> in india starting from <span>39999</span>. Realme X50 Pro Available at <span>flipkart</span> in lowest prices. This smartphone coming with 4 variants like 6/128GB, 8/128GB, 8/256GB, 12/256GB with colour options like A Moss Green, Rust Red. The smart -phone is powered by the <span>Qualcomm SM8250 Snapdragon 865 (7 nm+)</span> and Non-removable Li-Po 4200 mAh battery. Fast charging 65W, 100% in 35 min and SuperDart Flash Charge. In Realme X50 Pro it has support for 5G nework.  </p>
           <a href="{% url 'realmeX50pro' %}" class="content_spec">Full Specificaton</a>
           <p></p>
-          <a href="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_amazon">
-            <button type="button" class="btn btn-primary">Click here to Buy from flipkart</button>
-          </a>
-          <a href="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_flipcart">
-            <button type="button" class="btn btn-outline-primary">
-              Click here for current price
-            </button>
-          </a>
+
+          <div class="aff-link1">
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_amazon">
+              <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+            </form>
+            <form action="https://www.flipkart.com/realme-x50-pro-rust-red-128-gb/p/itm13d1770db35a3?pid=MOBFPBBKTDX2EKEH&lid=LSTMOBFPBBKTDX2EKEHAKFQ0C&marketplace=FLIPKART&pageUID=1594896068771" class="affilated-link_flipcart">
+              <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+            </form>
+          </div>
+
         </div>
       </div>
     </div>
@@ -177,16 +179,16 @@
          <p class="content_text">OnePlus Release his brand new <span>OnePlus 8</span> in india on  2020, April 14 and it starting from <span> Rs.41,999</span>. OnePlus 8 is available at <span>Amazon</span> in lowest price. This smartphone comes with 2 variants like 128GB 6GB RAM and 128GB 8GB RAM with UFS 3.0 storage technology. It is available at 3 colour options like	Glacial Green, Interstellar Glow and Onyx Black. The smart-phone is powered by the <span>Qualcomm Snapdragon 865 (7 nm+)</span> and   Non-removable Li-Po 4510 mAh battery that supports Wrap Charge 30T (5V/6A) which can charge 50% in just 23 min. It comes with the 5G chipset:X55 which supports 5G nework.</p>
          <a href="{% url 'OnePlus_8'%}" class="content_spec">Full Specificaton</a>
          <p></p>
-         <a href="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2" class="affilated-link_amazon">
-           <button type="button" class="btn btn-primary">
-             Click here to Buy from amazon
-           </button>
-         </a>
-         <a href="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2" class="affilated-link_flipcart">
-           <button type="button" class="btn btn-outline-primary">
-             Click here for current price
-           </button>
-         </a>
+
+         <div class="aff-link1">
+           <form action="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2">
+             <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+           </form>
+           <form action="https://www.amazon.in/Test-Exclusive-516/dp/B077Q42GD8/ref=sr_1_2?dchild=1&keywords=oneplus+8&qid=1594894553&sr=8-2">
+             <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+           </form>
+         </div>
+
        </div>
      </div>
    </div>
@@ -201,16 +203,17 @@
          <p class="content_text">Xaiomi Release his new <span>Redmi Note 9 Pro Max</span> in india start from <span>16,999</span>. Redmi Note 9 Pro Max Available at <span>Amazon</span> in lowest prices. This smartphone coming with 2 variants like 6/128Gb and 8/128Gb with colour options like Aurora Blue, Glacier White, and Interstellar Black. The smart -phone is powered by the <span>Qualcomm Snapdragon 720G SoC</span> and having 5020mAh battery. It has support for 33W fast charging which is very helpful...  </p>
          <a href="{% url 'note9promax' %}" class="content_spec">Full Specification</a>
          <p></p>
-         <a href="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1" class="affilated-link_amazon">
-           <button type="button" class="btn btn-primary">
-             Click here to Buy form amazon
-           </button>
-         </a>
-         <a href="https://www.amazon.in/s?k=Redmi+Note+9+Pro+Max&ref=nb_sb_noss" class="affilated-link_flipcart">
-           <button type="button" class="btn btn-outline-primary">
-             Click here for current price
-           </button>
-         </a>
+
+         <div class="aff-link1">
+           <form action="https://www.amazon.in/Test-Exclusive-558/dp/B077PWJRFH/ref=sr_1_1?dchild=1&keywords=Redmi+Note+9+Pro+Max&qid=1594890267&sr=8-1">
+             <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+           </form>
+           <form action="https://www.amazon.in/s?k=Redmi+Note+9+Pro+Max&ref=nb_sb_noss">
+             <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+           </form>
+         </div>
+
+
          <p></p><br>
        </div>
      </div>
@@ -226,16 +229,18 @@
          <p class="content_text">Xaiomi Release his brand new <span>Mi 10 5G</span> in india on 14th Faburary 2020 and start from <span>49,999</span>.Mi 10 Available at <span>Amazon</span> in lowest prices. This smartphone coming with 3 variants like 8/128Gb, 8/256Gb and 8/256GB with colour options like coral Green and Twilight Grey. The smart -phone is powered by the <span>Qualcomm SM8250 Snapdragon 865 (7 nm+)</span> having powerful processor and with 5020mAh battery. It has support for 30W wireless charging + 10W reverse charging. In Mi 10 it has support for 5G nework.</p>
          <a href="{% url 'mi10' %}" class="content_spec">Full Specificaton</a>
          <p></p>
-         <a href="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1" class="affilated-link_amazon">
-           <button type="button" class="btn btn-primary">
-             Click here to Buy form amazon
-           </button>
-         </a>
-         <a href="https://www.amazon.in/s?k=xiaomi+Mi+10&ref=nb_sb_noss" class="affilated-link_flipcart">
-           <button type="button" class="btn btn-outline-primary">
-             Click here for current price
-           </button>
-         </a>
+
+
+         <div class="aff-link1">
+           <form action="https://www.amazon.in/Test-A6010-Dummy-Asin_42/dp/B07X4R4F4G/ref=sr_1_1?dchild=1&keywords=xiaomi+Mi+10&qid=1594890336&sr=8-1">
+             <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+           </form>
+           <form action="https://www.amazon.in/s?k=xiaomi+Mi+10&ref=nb_sb_noss">
+             <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+           </form>
+         </div>
+
+
        </div>
      </div>
    </div>
@@ -250,16 +255,17 @@
          <p class="content_text">Apple Release his new <span>Apple 11 Pro Max</span> in india on 2019, September 20 start from <span>1,17,100</span>. Apple 11 Pro Max Available at <span>flipkart</span> in lowest prices. This smartphone coming with 3 variants like 64GB 4GB RAM, 256GB 4GB RAM, 512GB 4GB RAM with colour options like Space Gray, Silver, Gold, Midnight Green. The smart -phone is powered by the <span>Apple A13 Bionic (7 nm+)</span> and Non-removable Li-Ion 3969 mAh battery (15.04 Wh). It has support for Fast charging 18W, 50% in 30 min.  </p>
          <a href="{% url '11ProMax' %}" class="content_spec">Full Specificaton</a>
         <p></p>
-        <a href="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_amazon">
-          <button type="button" class="btn btn-primary">
-            Click here to Buy form amazon
-          </button>
-        </a>
-        <a href="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl" class="affilated-link_flipcart">
-          <button type="button" class="btn btn-outline-primary">
-            Click here for current price
-          </button>
-        </a>
+
+        <div class="aff-link1">
+          <form action="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+            <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+          </form>
+          <form action="https://www.amazon.in/Apple-iPhone-Pro-Max-64GB/dp/B07XVLMZHH/ref=sr_1_1_sspa?dchild=1&keywords=Apple+11+Pro+Max&qid=1594878920&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUFRMlcyOExEN1k1MTQmZW5jcnlwdGVkSWQ9QTAxOTYyNzFRVDlSOVdRQlNIVVkmZW5jcnlwdGVkQWRJZD1BMDg1Njk3NTNKUFpGVktJQ1FYNE0md2lkZ2V0TmFtZT1zcF9hdGYmYWN0aW9uPWNsaWNrUmVkaXJlY3QmZG9Ob3RMb2dDbGljaz10cnVl">
+            <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+          </form>
+        </div>
+
+
        </div>
      </div>
    </div>
@@ -274,16 +280,17 @@
        <p class="content_text">Vivo Release his new smartphone <span>Vivo V17</span> in india starting from <span>24,990</span>. Vivo V17 Available at <span>amanzon</span> in lowest prices. This smartphone coming with 2 variants like 8/128GB, 8/256GB with colour options like Admiral Blue, Glacier Ice White, Midnight Ocean Black. The smart -phone is powered by the <span>	Qualcomm SDM675 Snapdragon 675 (11 nm)</span> and Non-removable Li-Po 4500 mAh battery.it supports Fast charging of 18W. </p>
        <a href="{% url 'vivoV17' %}" class="content_spec">Full Specificaton</a>
        <p></p>
-       <a href="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1" class="affilated-link_amazon">
-         <button type="button" class="btn btn-primary">
-           Click here to Buy from amazon
-         </button>
-       </a>
-       <a href="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1" class="affilated-link_amazon">
-         <button type="button" class="btn btn-outline-primary">
-           Click here for current price
-         </button>
-       </a>
+
+       <div class="aff-link1">
+         <form action="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1">
+           <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from amazon</button>
+         </form>
+         <form action="https://www.amazon.in/Vivo-Midnight-Storage-Additional-Exchange/dp/B07XD2HY9L/ref=mp_s_a_1_1?dchild=1&keywords=vivo+v17&qid=1594897456&sr=8-1">
+           <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+         </form>
+       </div>
+
+
        <p></p>
      </div>
    </div>
@@ -299,16 +306,18 @@
        <p class="content_text">Realme Release his brand new <span>Realme 6 Pro</span> in india on  2020, March 13 and starting from <span> 17999</span>.realme 6 Pro Available at <span>flipkart</span> in lowest prices. This smartphone coming with 3 variants like 64GB 6GB RAM, 128GB 6GB RAM, 128GB 8GB RAM with colour options like	Lightning Blue, Lightning Orange, Lightning Red. The smart -phone is powered by the <span>Qualcomm SM7125 Snapdragon 720G (8 nm)</span> and Non-removable Li-Po 4300 mAh battery.it has support for	Fast charging 30W, 100% in 57 min.</p>
        <a href="{% url 'realme6pro' %}" class="content_spec">Full Specificaton</a>
        <p></p>
-       <a href="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_amazon">
-         <button type="button" class="btn btn-primary">
-           Click here to Buy from flipkart
-         </button>
-       </a>
-       <a href="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_flipcart">
-         <button type="button" class="btn btn-outline-primary">
-           Click here for current price
-         </button>
-       </a>
+
+
+       <div class="aff-link1">
+         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_amazon">
+           <button class="btn btn-primary affilated-link_amazon" type="submit">Click here to Buy from flipkart</button>
+         </form>
+         <form action="https://www.flipkart.com/realme-6-pro-lightning-blue-64-gb/p/itm19b1945c12aee?pid=MOBFPCX76F3BYQDH&lid=LSTMOBFPCX76F3BYQDHGAICT2&marketplace=FLIPKART&pageUID=1594896233895" class="affilated-link_flipcart">
+           <button  class="btn btn-outline-primary affilated-link_flipcart" type="submit">Click here for current price </button>
+         </form>
+       </div>
+
+
      </div>
    </div>
   </div>
